feat: 레이싱 우승자 출력하기